git: edit gitignore feature: add feature select in body refactor: refactor lucid principle
