# server/openapi/schema.json
@@ -69,11 +69,23 @@
                 "properties": {
                   "prompt": {
                     "type": "string"
+                  },
+                  "enableDrHouse": {
+                    "type": "boolean"
+                  },
+                  "ragEnabledHistoryChat": {
+                    "type": "boolean"
+                  },
+                  "ragEnabledMedicalContext": {
+                    "type": "boolean"
                   }
                 }
               },
               "example": {
-                "prompt": "I have fever and diarrhea, what do you recommend like medication?"
+                "prompt": "I have fever and diarrhea, what do you recommend like medication?",
+                "enableDrHouse": false,
+                "ragEnabledHistoryChat": false,
+                "ragEnabledMedicalContext": false
               }
             }
           }
